--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "21.x"
+    "node": "21.x",
+    "npm": "10.x",
+    "yarn": "3.x"
   },
   "scripts": {
     "dev": "next dev",
